syntax = "proto3";

option go_package = "go-task/user";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse) {}
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string fullName = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshAccessTokenRequest {
  string refreshToken = 1;
}

message User {
  string id = 1;
  string email = 2;
  string fullName = 3;
}

message CreateUserResponse {
  User user = 1;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  User user = 3;
}

message RefreshAccessTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message UserCreatedEvent {
    string userId = 1;
    string email = 2;
    string fullName = 3;
}
